# spectre

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pour_claude.md  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: contestation-orientation.md  signalement-cluster.md
.github/workflows/: ci.yml  pipeline.yml
config/: sources.yaml
data/archive/: 2026-W28.json  2026-W29.json  2026-W30.json  README.md
scripts/: fetch_favicons.py
spectre/: __init__.py  analyze.py  analyzers.py  archive.py  audit.py  categorize.py  cluster.py  db.py  ingest.py  models.py  ogimage.py  pwa.py  render.py  schema.sql
templates/: _catnav.html  _macros.html  apropos.html  archive_week.html  archives.html  base.html  blindspots.html  blindspots.xml  categorie.html  cluster.html  feed.xml  feed_category.xml  index.html  mon_spectre.html  recherche.html  source.html  stats.html  style.css
tests/: conftest.py  test_analyze.py  test_archive.py  test_audit.py  test_categorize.py  test_cluster.py  test_ingest.py  test_lifecycle.py  test_ollama.py  test_render.py
